# Selenium-Tutorial

./: Pipfile  README.md  pyproject.toml  setup.py
Tutorial/Docs/: README.md
Tutorial/Docs/GettingStarted/: REAME.md
Tutorial/Docs/GettingStartedWithWebDriver/: README.md
Tutorial/Docs/Installation/: README.md
Tutorial/Docs/Introduction/SeleniumProjectAndTools/: README.md
Tutorial/Docs/Introduction/TestAutomation/: README.md
Tutorial/Docs/Introduction/TypesOfTesting/: README.md
Tutorial/Docs/WebDriver/BrowserManipulation/: README.md
Tutorial/Docs/WebDriver/DriverRequirements/: README.md
Tutorial/Docs/WebDriver/UnderstandingComponents/: README.md
Tutorial/Docs/WebDriver/Waits/: README.md
docs/source/: conf.py  index.rst
selenium/: context.py  data.py  eve_wiki_dead_page_category.py  eve_wiki_find_query_count.py  eve_wiki_fittings_saver.py  eve_wiki_rename_modules.py  file_name_checker.py  fit_file.txt
src/selenium/: context.py  konzum_klik_runner.py  runner.py  simple_runner.py
tests/: context.py
tests/package_two/: test_module_two.py
